--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ html {
       color: #0000ff !important;
   }
 
-  iframe {
+  iframe, .story-img{
     float: left;
 width: 70vw;
 height: 100vh;
