--- a/style.css
+++ b/style.css
@@ -1,139 +1,148 @@
 html {
-    scroll-behavior: smooth;
-  }
-  body {
-    overflow-x: scroll;
-    overflow-y: hidden;
-    width: auto;
-    max-height: 100vh;
-    font-family: "Times New Roman";
-    font-size: 21px;
-    margin: 0;
-  }
-
-  .loader {
-    width: 100vw;
-    height: 100vh;
-    background-color: white;
-    opacity: 1;
-    animation: load-animation 2s ease-in 0.5s forwards;
-    position: absolute;
-    z-index: 2;
-  }
-
-  @keyframes load-animation {
-    0% {
-      opacity: 1;
-    }
-    50% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-      z-index: -1;
-    }
-  }
-
-  #main-story, #other-story {
-    width: fit-content;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    display: flex;
-    float: left;
-  }
-
-  .story-wrapper {
-    width: calc(30vw - 48px);
-    padding-left: 24px;
-    padding-right: 24px;
-    height: 100vh;
-    overflow-y: scroll;
-  }
-  button {
-    float: left;
-  }
-  a {
-    text-decoration: none;
-    color: inherit;
-  }
-  .story-header{
-    height: 36px;
-    position: absolute;
-    width: calc(30vw - 24px);
-    background-color: white;
-    padding-top: 16px;
-    margin-left: -24px;
-    padding-left: 24px;
-  }
-  .content{
-    margin-top: 64px;
-  }
-  .name {
-    padding-left: 36px;
-  }
-  p.p1 {
-    font: 20px "Times New Roman";
-    color: #382d1b;
-  }
-  p.p2 {
-    font: 20px "Times New Roman";
-    color: #8f8080;
-    min-height: 21px;
-    margin:0;
-  }
-  p.p3 {
-    margin: 0;
-    font: 16px "Times New Roman";
-    color: #382d1b;
-  }
-  p.p4 {
-    margin: 0;
-    font: 20px "Times New Roman";
-    color: #8f8080;
-  }
-  span.s1 {
-    color: #8f8080;
-  }
-  span.s2 {
-    font: 20px "Times New Roman";
-    color: #8f8080;
-  }
-  span.s3 {
-    color: #0000ff;
-  }
-  span.s4 {
-    font-kerning: none;
-  }
-  span.s5 {
-    color: #382d1b;
+  scroll-behavior: smooth;
 }
-  span.s6 {
-    font: 16px "Times New Roman";
-    color: #0000ff;
-    cursor: pointer;
-  }
-  span.s6:hover {
-    color: #ff8200;
-  }
-  span.s7 {
-    font-kerning: none;
-    color: #382d1b;
-  }
+body {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  width: auto;
+  max-height: 100vh;
+  font-family: "Times New Roman";
+  font-size: 21px;
+  margin: 0;
+}
 
-  span.Apple-tab-span {
-    display: block;
-    width: 20px;
-    height: 12px;
-    float: left;
-  }
+.loader {
+  width: 100vw;
+  height: 100vh;
+  background-color: white;
+  opacity: 1;
+  animation: load-animation 2s ease-in 0.5s forwards;
+  position: absolute;
+  z-index: 2;
+}
 
-  .colored-link {
-      color: #0000ff !important;
+@keyframes load-animation {
+  0% {
+    opacity: 1;
   }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    z-index: -1;
+  }
+}
 
-  iframe, .story-img{
-    float: left;
-    width: 70vw;
-    height: 100vh;
-    object-fit: cover;
-  }
+#main-story,
+#other-story {
+  width: fit-content;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  display: flex;
+  float: left;
+}
+
+.story-wrapper {
+  width: calc(30vw - 48px);
+  padding-left: 24px;
+  padding-right: 24px;
+  height: 100vh;
+  overflow-y: scroll;
+}
+button {
+  float: left;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+}
+.story-header {
+  height: 36px;
+  position: absolute;
+  width: calc(30vw - 24px);
+  background-color: white;
+  padding-top: 16px;
+  margin-left: -24px;
+  padding-left: 24px;
+}
+.content {
+  margin-top: 96px;
+}
+.name {
+  padding-left: 36px;
+}
+p.p1 {
+  font: 20px "Times New Roman";
+  color: #382d1b;
+}
+p.p2 {
+  font: 20px "Times New Roman";
+  color: #8f8080;
+  min-height: 21px;
+  margin: 0;
+}
+p.p3 {
+  margin: 0;
+  font: 16px "Times New Roman";
+  color: #382d1b;
+}
+p.p4 {
+  margin: 0;
+  font: 20px "Times New Roman";
+  color: #8f8080;
+}
+span.s1 {
+  color: #8f8080;
+}
+span.s2 {
+  font: 20px "Times New Roman";
+  color: #8f8080;
+}
+span.s3 {
+  color: #0000ff;
+}
+span.s4 {
+  font-kerning: none;
+}
+span.s5 {
+  color: #382d1b;
+}
+span.s6 {
+  font: 16px "Times New Roman";
+  color: #0000ff;
+  cursor: pointer;
+}
+span.s6:hover {
+  color: #ff8200;
+}
+span.s7 {
+  font-kerning: none;
+  color: #382d1b;
+}
+
+span.Apple-tab-span {
+  display: block;
+  width: 20px;
+  height: 12px;
+  float: left;
+}
+
+.colored-link {
+  color: #0000ff !important;
+}
+
+iframe,
+.story-img {
+  float: left;
+  width: 70vw;
+  height: 100vh;
+  object-fit: cover;
+}
+
+audio {
+  width: 30vw;
+  left: 0;
+  position: absolute;
+  top: 48px;
+}
