Fix for index page to commence at top 0

--- a/style.css
+++ b/style.css
@@ -161,6 +161,10 @@ span.Apple-tab-span {
     color: #0000ff !important;
 }
 
+.top{
+    top: 0 !important;
+}
+
 iframe,
 .story-img {
     float: left;
